--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 <body>
 
 
-
-
 <button class="back-button" id="back-button">
     <i class="fa-solid fa-arrow-left"></i>
     Back
 </button>
-
-
 
 
 <div class="page-container">
@@ -25,31 +21,27 @@
         <div class="main-groups-grid">
 <button class="main-group-tile" data-group="BMJ">
     <div class="main-group-icon"><i class="fa-solid fa-helmet-safety"></i></div>
-    <div class="main-group-label">BMJ<br><small style="font-size:11px;opacity:0.9;font-weight:400;">Joint Venture</small></div>
+    <div class="main-group-label">BMJV<br><small style="font-size:12px;opacity:0.9;font-weight:400;">Delivery Partners</small></div>
 </button>
 <button class="main-group-tile" data-group="AMJ">
     <div class="main-group-icon"><i class="fa-solid fa-pen-ruler"></i></div>
-    <div class="main-group-label">AMJ<br><small style="font-size:11px;opacity:0.9;font-weight:400;">Designers</small></div>
+    <div class="main-group-label">AMJV<br><small style="font-size:12px;opacity:0.9;font-weight:400;">Designers</small></div>
 </button>
-<button class="main-group-tile" data-group="Third Party">
-    <div class="main-group-icon"><i class="fa-solid fa-handshake"></i></div>
-    <div class="main-group-label">Third Party<br><small style="font-size:11px;opacity:0.9;font-weight:400;">Supply Chain</small></div>
+<button class="main-group-tile" data-group="LTC">
+    <div class="main-group-icon"><i class="fa-solid fa-road-bridge"></i></div>
+    <div class="main-group-label">LTC<br><small style="font-size:12px;opacity:0.9;font-weight:400;">Client</small></div>
 </button>
 <button class="main-group-tile" data-group="Help Centre">
     <div class="main-group-icon"><i class="fa-solid fa-circle-info"></i></div>
-    <div class="main-group-label">Help Centre<br><small style="font-size:11px;opacity:0.9;font-weight:400;">Support</small></div>
+    <div class="main-group-label">Help Centre<br><small style="font-size:12px;opacity:0.9;font-weight:400;">Support</small></div>
 </button>
         </div>
     </div>
 
 
-
-
     <div id="tiles-page" class="page">
         <div class="tiles-grid" id="main-tiles-grid"></div>
     </div>
-
-
 
 
     <div id="subtiles-page" class="page">
@@ -58,168 +50,32 @@
 </div>
 
 
-
-
 <script>
 window.tilesData = [
     {
-        "id": "13",
-        "title": "Digital Component Catalogue",
-        "colour": "blue",
-        "category": "Private",
-        "type": "sub-tile",
-        "icon": "fa-regular fa-box-open",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/a9e20b58-7f06-4363-bf8c-57996566b033",
-        "tags": [
-            "BMJ",
-            "AMJ",
-            "Third Party"
-        ],
-        "parent_id": "10"
-    },
-    {
-        "id": "12",
-        "title": "Design Information Requirements (LOIN)",
-        "colour": "light-blue",
-        "category": "Public",
-        "type": "sub-tile",
-        "icon": "fa-solid fa-wallet",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/04670203-cff8-4de6-9906-3bb57403b497",
-        "tags": [
-            "BMJ",
-            "AMJ"
-        ],
-        "parent_id": "6"
-    },
-    {
-        "id": "14",
-        "title": "Supply Chain Information Requirements",
-        "colour": "orange",
-        "category": "Work in Progress",
-        "type": "sub-tile",
-        "icon": "fa-solid fa-pen-to-square",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/5b508732-22b0-4d4c-ab39-567524fe7584",
-        "tags": [
-            "BMJ"
-        ],
-        "parent_id": "6"
-    },
-    {
-        "id": "11",
-        "title": "New Topic",
-        "colour": "orange",
-        "category": "Work in Progress",
-        "type": "sub-tile",
-        "icon": "fa-solid fa-arrows-spin",
-        "url": "",
-        "tags": [
-            "BMJ"
-        ],
-        "parent_id": "8"
-    },
-    {
-        "id": "1",
-        "title": "Master Information Delivery Plan",
-        "colour": "light-blue",
-        "category": "Public",
-        "type": "tile",
-        "icon": "fa-regular fa-calendar-check",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/00bc1ac1-b4a3-4ada-a4ee-1cd93c8d6e9c",
-        "tags": [
-            "AMJ",
-            "BMJ"
-        ],
-        "parent_id": "None"
-    },
-    {
-        "id": "3",
-        "title": "Consents Register",
-        "colour": "blue",
-        "category": "Private",
-        "type": "tile",
-        "icon": "fa-solid fa-landmark",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/7322d21d-4504-4ee9-991f-df06dae35a8b",
-        "tags": [
-            "BMJ"
-        ],
-        "parent_id": "None"
-    },
-    {
-        "id": "4",
-        "title": "Temporary Works Register",
-        "colour": "blue",
-        "category": "Private",
-        "type": "tile",
-        "icon": "fa-solid fa-helmet-safety",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/6acf8fde-8782-45f9-85d2-b9978f3ff5b9",
-        "tags": [
-            "BMJ"
-        ],
-        "parent_id": "None"
-    },
-    {
-        "id": "6",
-        "title": "Digital Engineering Management",
-        "colour": "blue",
-        "category": "Private",
-        "type": "tile",
-        "icon": "fa-solid fa-cube",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/a9e20b58-7f06-4363-bf8c-57996566b033",
-        "tags": [
-            "BMJ"
-        ],
-        "parent_id": "None"
-    },
-    {
-        "id": "7",
-        "title": "Programme Management",
-        "colour": "blue",
-        "category": "Private",
-        "type": "tile",
-        "icon": "fa-regular fa-calendar-check",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/0408eea1-710f-4e80-90c3-8d6fca0189d5",
-        "tags": [
-            "BMJ",
-            "AMJ"
-        ],
-        "parent_id": "None"
-    },
-    {
-        "id": "9",
+        "id": "10",
         "title": "Information Standards",
         "colour": "light-blue",
         "category": "Public",
         "type": "tile",
         "icon": "fa-solid fa-car-tunnel",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/9e4e04d7-1328-4a83-9b32-0a954a4ee9f2",
+        "url": "",
         "tags": [
-            "BMJ",
             "AMJ",
-            "Third Party"
+            "BMJ",
+            "LTC",
+            "Help Centre"
         ],
         "parent_id": "None"
     },
     {
-        "id": "10",
-        "title": "Monthly Progress Report",
+        "id": "3",
+        "title": "BMJV - Master Information Delivery Plan",
         "colour": "light-blue",
         "category": "Public",
         "type": "tile",
-        "icon": "fa-solid fa-chart-area",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/88f05063-6233-42fa-a939-0fe11f5069f5",
-        "tags": [
-            "BMJ"
-        ],
-        "parent_id": "None"
-    },
-    {
-        "id": "5",
-        "title": "Procurement Management",
-        "colour": "orange",
-        "category": "Work in Progress",
-        "type": "tile",
-        "icon": "fa-solid fa-cart-shopping",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/19242ecc-a357-4116-8863-5933532f61d5",
+        "icon": "fa-regular fa-calendar-check",
+        "url": "",
         "tags": [
             "BMJ"
         ],
@@ -227,12 +83,143 @@ window.tilesData = [
     },
     {
         "id": "2",
-        "title": "Carbon Management",
-        "colour": "orange",
-        "category": "Work in Progress",
+        "title": "Design - Master Information Delivery Plan",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-regular fa-calendar-check",
+        "url": "",
+        "tags": [
+            "AMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "19",
+        "title": "LTC-BMJV Procurement Report",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-cart-shopping",
+        "url": "",
+        "tags": [
+            "LTC"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "5",
+        "title": "Human Factors Issues Log",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-clipboard-list",
+        "url": "",
+        "tags": [
+            "AMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "14",
+        "title": "Monthly Progress Report",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-chart-area",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "12",
+        "title": "LTC-BMJV Land Access Tracker",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-map-location-dot",
+        "url": "",
+        "tags": [
+            "LTC"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "17",
+        "title": "Digital Component Catalogue",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-box-open",
+        "url": "",
+        "tags": [
+            "AMJ",
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "6",
+        "title": "Asset Data Management",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-cube",
+        "url": "",
+        "tags": [
+            "AMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "20",
+        "title": "Design Information Requirements (LOIN)",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-car-tunnel",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "8",
+        "title": "Consent Management ",
+        "colour": "blue",
+        "category": "Private",
+        "type": "tile",
+        "icon": "fa-solid fa-landmark",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "4",
+        "title": "Design Assumption Register",
+        "colour": "light-blue",
+        "category": "Public",
+        "type": "tile",
+        "icon": "fa-solid fa-pencil",
+        "url": "",
+        "tags": [
+            "AMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "7",
+        "title": "Carbon & Material Management",
+        "colour": "blue",
+        "category": "Private",
         "type": "tile",
         "icon": "fa-solid fa-seedling",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/fd77907f-eeb8-4ef2-bd63-04b710630589",
+        "url": "",
         "tags": [
             "BMJ",
             "AMJ"
@@ -240,13 +227,65 @@ window.tilesData = [
         "parent_id": "None"
     },
     {
-        "id": "8",
-        "title": "Land Access",
+        "id": "18",
+        "title": "Temporary Works Management",
+        "colour": "blue",
+        "category": "Private",
+        "type": "tile",
+        "icon": "fa-solid fa-helmet-safety",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "13",
+        "title": "Procurement Management",
+        "colour": "blue",
+        "category": "Private",
+        "type": "tile",
+        "icon": "fa-solid fa-cart-shopping",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "11",
+        "title": "Land Access Management",
         "colour": "orange",
         "category": "Work in Progress",
         "type": "tile",
         "icon": "fa-solid fa-map-location-dot",
-        "url": "https://app.morta.io/hub/2e7210e0-76c0-4809-8bb9-089c2c184d08/document/b2aa7c13-07e2-42e2-b51b-a5d02d14dd1e",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "9",
+        "title": "DALUX Deployment Plan",
+        "colour": "orange",
+        "category": "Work in Progress",
+        "type": "tile",
+        "icon": "fa-solid fa-bridge-circle-check",
+        "url": "",
+        "tags": [
+            "BMJ"
+        ],
+        "parent_id": "None"
+    },
+    {
+        "id": "16",
+        "title": "Methods Management",
+        "colour": "orange",
+        "category": "Work in Progress",
+        "type": "tile",
+        "icon": "fa-solid fa-person-digging",
+        "url": "",
         "tags": [
             "BMJ"
         ],
@@ -254,14 +293,14 @@ window.tilesData = [
     },
     {
         "id": "15",
-        "title": "Help Centre",
+        "title": "Programme Management",
         "colour": "orange",
         "category": "Work in Progress",
         "type": "tile",
-        "icon": "fa-solid fa-square",
+        "icon": "fa-regular fa-calendar-check",
         "url": "",
         "tags": [
-            "Help Centre"
+            "BMJ"
         ],
         "parent_id": "None"
     }
